--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javacord</groupId>
+            <artifactId>javacord</artifactId>
+            <version>3.8.0</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
 </project>
